<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.social.SocialFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/zenit_white" />

        <!-- Instagram -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/instagram_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:text="@string/instagram"
            android:textColor="@color/zenit_dark_blue"
            app:backgroundTint="@color/zenit_cyan_accent"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_instagram"
            app:iconGravity="textStart"
            app:iconTint="@color/zenit_dark_blue"
            app:rippleColor="@color/zenit_dark_blue" />

        <!-- Facebook -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebook_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/facebook"
            android:textColor="@color/zenit_dark_blue"
            app:backgroundTint="@color/zenit_cyan_accent"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_facebook"
            app:iconGravity="textStart"
            app:iconTint="@color/zenit_dark_blue"
            app:rippleColor="@color/zenit_dark_blue" />

    </LinearLayout>
</layout>